# CodeRepairRL

./: .env.template  .gitignore  README.md  litellm_config.yaml  pyproject.toml  pyproject.toml.old
benchmarks/: README.md  benchmark_container.def  swe_bench_mini_infer_job.sh  swe_bench_nano_infer_job.sh  swe_nano_infer_job.sh  vllm.sh
benchmarks/swe_bench/: merge_preds.py  run_all_harness_evals.sh  run_all_r2egym_evals.sh  run_harness_eval.sh  run_mini_eval.py  run_nano_eval.py  swe_minisweagent_job.sh  swe_nano_job.sh
benchmarks/tau_bench/: tau_job.sh
benchmarks/terminal_bench/: terminal_job.sh
docs/: PLAN.md
scripts/: appt_common.sh  large_grpo_lora_train_job.sh  medium_grpo_lora_train_job.sh  pull_swe_images.py  pull_swe_images_job.sh  run_devstral_eval.sh  sft_train_job.sh  small_grpo_lora_train_job.sh  small_sft_train_job.sh  train_container.def
scripts/deepspeed/: zero2.yaml  zero3.yaml
scripts/grpo/: large_grpo_lora_moe_train_job.sh  large_grpo_lora_train_job.sh  medium_grpo_lora_train_job.sh  small_grpo_lora_train_job.sh  start_grpo_train.sh  start_vllm_server.sh
scripts/hf/: upload_lora_adapters.py
src/: curate_sft_data.py  train_grpo.py  train_sft.py
src/agents/: __init__.py  mini_agent.py  nano_agent.py
src/chat_templates/: llama_nemotron_nano_generic_tool_calling.jinja  llama_nemotron_nano_toolcall_parser.py  tool_chat_template_llama3.1_json.jinja
src/conf/: sft_config.yaml
src/conf/agent/: mini.yaml  nano.yaml
src/conf/grpo/: base.yaml  multi_turn.yaml  multi_turn_gspo.yaml  single_turn.yaml
src/conf/model/: large_gemma.yaml  large_qwen.yaml  large_qwen_moe.yaml  medium_gemma.yaml  medium_nemotron.yaml  medium_phi.yaml  medium_qwen.yaml  small_gemma.yaml  small_glm.yaml  small_llama.yaml  small_mistral.yaml  small_nemotron.yaml  small_qwen.yaml  tiny_qwen.yaml
src/conf/run/: repo_repair_multilingual.yaml
src/conf/sft/: default.yaml
src/data/: __init__.py  stack.py  swe_gym.py
src/rewards/: __init__.py  strategy.py  terminal.py
src/trainers/: kl_sft.py
src/trajectory_analyzer/: __init__.py  __main__.py  cli.py
src/trajectory_analyzer/analysis/: __init__.py  comparator.py  dynamics.py  failure.py  metrics.py  transfer.py  variance.py
src/trajectory_analyzer/conf/: __init__.py  all_results_config.yaml  analyzer_config.yaml  example_config.yaml
src/trajectory_analyzer/loaders/: __init__.py  base.py  claude_code.py  nano_agent.py  r2e_gym.py  swe_agent.py  swebench_instance.py
src/trajectory_analyzer/models/: __init__.py  instance.py  run.py  trajectory.py
src/trajectory_analyzer/plotting/: __init__.py  plots.py
src/utils/: git.py  llm.py
tests/: test_swebench_environment.py  test_terminal_depth_reward.py  test_terminal_reward.py  test_unified_diff_rewards.py
