[project]
name = "crrl"
version = "0.1.0"
description = "Finetuning LLMs with RL to improve program repair capabilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "gitpython>=3.1.45",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.8",
    "mini-swe-agent>=1.17.0",
    "nano-agent",
    "wandb>=0.23.0",
]

[tool.uv.sources]
nano-agent = { git = "https://github.com/ASSERT-KTH/nano-agent", branch = "andre/feat/remote-env" }
